[project]
name = "rag"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "beautifulsoup4>=4.14.3",
    "chromadb>=1.5.2",
    "groq==0.30.0",
    "langchain>=1.2.10",
    "langchain-groq>=1.1.2",
    "langchain-text-splitters>=1.1.1",
    "pdfplumber>=0.11.9",
    "pypdf2>=3.0.1",
    "python-dotenv>=1.2.1",
    "requests>=2.32.5",
    "sentence-transformers>=5.3.0",
]
